# next-proxies-pod

./: .env  Cargo.toml  Cross.toml  build.rs
.github/workflows/: build.yaml
proto/: v2fly.proto
src/: main.rs
src/api/: mod.rs  server.rs  v2ray_api.rs
src/config/: mod.rs
src/config/sing_box/: experimental.rs  mod.rs  shadowsocks.rs
src/process/: mod.rs
src/proto-gen/: v2ray.core.app.stats.command.rs
